bug 15282 modified : improved perfomances when loading of components tunned the EMF loading options to avoid using obsolete methods, to cache the types, to cache the XML parser and more. optimised the EmfComponent equals method that was called more than 300000 times, reduce the number of time equals method is called by using a HashSet instead of an ArrayList for holding Components references
git-svn-id: http://talendforge.org/svn/tos/trunk@47428 f6f1c999-d317-4740-80b0-e6d1abc6f99e